# badge-data-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  analytics_app.py  compaction_monitoring.py  pipeline.py  pyproject.toml  requirements.txt
api/: client.py  generators.py  main.py
scripts/: lake_stats.py
utils/: tools.py
